k8s/apigatewayservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigatewayservice
  namespace: bankly
  labels:
    app: apigatewayservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigatewayservice
  template:
    metadata:
      labels:
        app: apigatewayservice
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      dnsConfig:
        nameservers:
          - 34.118.224.10
      containers:
        - name: apigatewayservice
          image: asia-south1-docker.pkg.dev/bankly-microservices-project/bankly-images/apigatewayservice:0.0.1 # Using 0.0.1 tag
          ports:
            - containerPort: 8080 # Assuming your API Gateway listens on 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 30
            timeoutSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: apigatewayservice
  namespace: bankly
spec:
  selector:
    app: apigatewayservice
  ports:
    - protocol: TCP
      port: 80 # Service port
      targetPort: 8080 # Container port
  type: ClusterIP
