k8s/paymentservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice
  namespace: bankly
  labels:
    app: paymentservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      dnsConfig:
        nameservers:
          - 34.118.224.10
      containers:
        - name: paymentservice
          image: asia-south1-docker.pkg.dev/bankly-microservices-project/bankly-images/paymentservice:0.0.1 # Using 0.0.1 tag
          ports:
            - containerPort: 8083 # Assuming your payment service listens on 8082
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 90
            periodSeconds: 30
            timeoutSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice
  namespace: bankly
spec:
  selector:
    app: paymentservice
  ports:
    - protocol: TCP
      port: 80 # Service port
      targetPort: 8083 # Container port
  type: ClusterIP
