k8s/transactionservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transactionservice
  namespace: bankly
  labels:
    app: transactionservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transactionservice
  template:
    metadata:
      labels:
        app: transactionservice
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      dnsConfig:
        nameservers:
          - 34.118.224.10
      containers:
        - name: transactionservice
          image: asia-south1-docker.pkg.dev/bankly-microservices-project/bankly-images/transactionservice:0.0.1 # Using 0.0.1 tag
          ports:
            - containerPort: 8082 # Assuming your transaction service listens on 8081
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 90
            periodSeconds: 30
            timeoutSeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: transactionservice
  namespace: bankly
spec:
  selector:
    app: transactionservice
  ports:
    - protocol: TCP
      port: 80 # Service port
      targetPort: 8082 # Container port
  type: ClusterIP
